--- a/Angular app/Angular-app/src/app/Products/products.component.scss
+++ b/Angular app/Angular-app/src/app/Products/products.component.scss
@@ -8,5 +8,10 @@
   margin-left: 27%;
 }
 .card{
-  height:400px;
+  height:475px;
+}
+.product-image{
+  width:150px;
+  height:150px;
+  margin-left:30%
 }
